--- a/views/shop.html
+++ b/views/shop.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -23,7 +23,7 @@
     <main>
         <h1>My Products</h1>
         <p>List of all the products...</p>
-        <!-- <div class="grid">
+        comment <div class="grid">
             <article class="card product-item">
                 <header class="card__header">
                     <h1 class="product__title">Great Book</h1>
@@ -39,8 +39,8 @@
                     <button class="btn">Add to Cart</button>
                 </div>
             </article>
-        </div> -->
+        </div> comment
     </main>
 </body>
 
-</html>
+</html> -->
