--- a/views/add-product.pug
+++ b/views/add-product.pug
@@ -1,26 +1,17 @@
-doctype html
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Add Productz
-        link(rel="stylesheet", href="/css/forms.css")
-        link(rel="stylesheet", href="/css/main.css")
-        link(rel="stylesheet", href="/css/product.css")
-    body 
-        header.main-header
-            nav.main-header__nav
-                ul.main-header__item-list
-                    li.main-header__item
-                        a(href="/") Shop
-                    li.main-header__item
-                        a.active(href="/add-product") Add product
-        main
-            form.product-form(href="/add-product", method="POST")
+extends layouts/main-layout.pug
+
+block styles 
+    link(rel="stylesheet", href="/css/forms.css")
+    link(rel="stylesheet", href="/css/product.css")
+
+
+block content 
+    main
+        form.product-form(href="/add-product", method="POST")
                 div.form-control
                     label(for="title") Title
                         input(type="text", name="title", id="title")
-                button(type="submit", class="btn") Add Product
+                    button.btn(type="submit") Add Product
 
 
 
