--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,7 +1,6 @@
-<%- include( '../includes/head.ejs' ) %>
-
+<%- include('../includes/head.ejs') %>
     </head>
 
     <body>
-        <%- include( '../includes/nav.ejs' ) %>
-        <%- include( '../includes/end.ejs' ) %>
+        <%- include('../includes/navigation.ejs') %>
+        <%- include('../includes/end.ejs') %>
