--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -1,12 +1,9 @@
-<%- include( '../includes/head.ejs' ) %>
-
+<%- include('../includes/head.ejs') %>
     </head>
 
     <body>
-        <%- include( '../includes/nav.ejs' ) %>
-    <main>
-        <h1>
-            Nothing there!
-        </h1>
-    </main>
-        <%- include( '../includes/end.ejs' ) %>
+        <%- include('../includes/navigation.ejs') %>
+        <main>
+            <h1>Nothing there!</h1>
+        </main>
+        <%- include('../includes/end.ejs') %>
