--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -1,13 +1,12 @@
-<%- include( '../includes/head.ejs' ) %>
-
+<%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/product.css">
     </head>
 
     <body>
-        <%- include( '../includes/nav.ejs' ) %>
+        <%- include('../includes/navigation.ejs') %>
 
             <main>
-
-                <% if (prods.length> 0) { %>
+                <% if (prods.length > 0) { %>
                     <div class="grid">
                         <% for (let product of prods) { %>
                             <article class="card product-item">
@@ -17,25 +16,26 @@
                                     </h1>
                                 </header>
                                 <div class="card__image">
-                                    <img src="<%= product.imageUrl %>"
-                                        alt="<%= product.title %>">
+                                    <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
                                 </div>
                                 <div class="card__content">
-                                    <h2 class="product__price">€ <%= product.price %></h2>
-                                    <p class="product__description"><%= product.description %></p>
+                                    <h2 class="product__price">$
+                                        <%= product.price %>
+                                    </h2>
+                                    <p class="product__description">
+                                        <%= product.description %>
+                                    </p>
                                 </div>
                                 <div class="card__actions">
                                     <form action="/add-to-cart" method="POST">
-                                        <button class="btn" type="submit">Add to Cart</button>
+                                        <button class="btn">Add to Cart</button>
                                     </form>
-                                    
                                 </div>
                             </article>
                             <% } %>
                     </div>
                     <% } else { %>
-                        <h1>No products!</h1>
+                        <h1>No Products Found!</h1>
                         <% } %>
             </main>
-
-            <%- include( '../includes/end.ejs' ) %>
+            <%- include('../includes/end.ejs') %>
